--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,21 @@
 <html>
-    <head>
 
-    </head>
-    <body>
-        <h1>News Scraper!</h1>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <title>News Scraper!</title>
+</head>
+
+<body>
+    <div id="header-div">
+        <h1 id="">News Scraper!</h1>
         <a href="/scrape">Scrape new articles!</a>
-        <div id="articles"></div>
-    </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    </div>
+
+    <div id="articles"></div>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="app.js"></script>
+
 </html>
