--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     </div>
 
     <div id="articles"></div>
+    <div id="comments-div"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="app.js"></script>
